--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
 <body>
     <h1>Welcome to the Divine Diarrhea AI!</h1>
     <p>This is the official page for the Gospel of the Flush, powered by AI.</p>
-    <p>Follow the movement on Twitter: <a href="https://twitter.com/divinediahhrea">@divinediahhrea</a></p>
+    <p>Follow the movement on Twitter: <a href="https://twitter.com/divinediarrhea">@divinediarrhea</a></p>
 </body>
 </html>
