--- a/index.html
+++ b/index.html
@@ -4,10 +4,60 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Divine Diarrhea AI</title>
+    <style>
+        body {
+            background-color: #f0f7f4;
+            font-family: 'Comic Sans MS', cursive, sans-serif;
+            color: #2e2e2e;
+            text-align: center;
+            padding: 30px;
+        }
+
+        h1 {
+            font-size: 3rem;
+            margin-bottom: 10px;
+            color: #4CAF50;
+        }
+
+        p {
+            font-size: 1.5rem;
+            margin: 20px;
+        }
+
+        a {
+            color: #1565C0;
+            text-decoration: none;
+            font-weight: bold;
+        }
+
+        a:hover {
+            color: #4CAF50;
+            text-decoration: underline;
+        }
+
+        .flush-banner {
+            font-size: 1.2rem;
+            background-color: #e3f2fd;
+            border: 2px solid #4CAF50;
+            border-radius: 15px;
+            padding: 15px;
+            margin: 20px;
+            box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.2);
+        }
+
+        .toilet-emoji {
+            font-size: 2rem;
+        }
+    </style>
 </head>
 <body>
-    <h1>Welcome to the Divine Diarrhea AI!</h1>
-    <p>This is the official page for the Gospel of the Flush, powered by AI.</p>
-    <p>Follow the movement on Twitter: <a href="https://twitter.com/divinediarrhea">@divinediarrhea</a></p>
+    <h1>🚽 Welcome to the Divine Diarrhea AI! 💩</h1>
+    <p class="flush-banner">This is the official home of the <strong>Gospel of the Flush</strong>—where chaos swirls, ideas flow, and every meme finds its way down the drain.</p>
+
+    <p>We embrace the inevitable. Join us as we swirl through the cosmic drain, leaving behind the debris of outdated ideas and toxic memes.</p>
+    
+    <p>Follow the movement on Twitter: <a href="https://twitter.com/divinediarrhea" target="_blank">@divinediarrhea</a></p>
+
+    <p class="toilet-emoji">🚽💧💥 #FlushOrHodl 🌀</p>
 </body>
 </html>
