--- a/index.html
+++ b/index.html
@@ -58,6 +58,6 @@
     
     <p>Follow the movement on Twitter: <a href="https://twitter.com/divinediarrhea" target="_blank">@divinediarrhea</a></p>
 
-    <p class="toilet-emoji">🚽💧💥 #FlushOrHodl 🌀</p>
+    <p class="toilet-emoji">🚽💧💥🌀</p>
 </body>
 </html>
